{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 340,
  "lineage": "b15126f8-2088-6b3f-2eee-948be57b1b38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:410585721938:loadbalancer/app/myapp-load-balancer/c58c814cef870a00",
            "arn_suffix": "app/myapp-load-balancer/c58c814cef870a00",
            "dns_name": "myapp-load-balancer-514080472.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:410585721938:loadbalancer/app/myapp-load-balancer/c58c814cef870a00",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "security_groups": [
              "sg-051f9873474d7677b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06f206e118a16b213"
              },
              {
                "subnet_id": "subnet-08e010359e6cdfca4"
              }
            ],
            "subnets": [
              "subnet-06f206e118a16b213",
              "subnet-08e010359e6cdfca4"
            ],
            "tags": {
              "Name": "tf-init-dev-alb"
            },
            "tags_all": {
              "Name": "tf-init-dev-alb"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "testapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:410585721938:listener/app/myapp-load-balancer/c58c814cef870a00/bf8937c2248e69dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:410585721938:targetgroup/myapp-tg/ecc31f9a212424bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:410585721938:listener/app/myapp-load-balancer/c58c814cef870a00/bf8937c2248e69dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:410585721938:loadbalancer/app/myapp-load-balancer/c58c814cef870a00",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "tf-init-dev-alb-listener"
            },
            "tags_all": {
              "Name": "tf-init-dev-alb-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available",
            "aws_alb.alb",
            "aws_alb_target_group.myapp-tg",
            "aws_security_group.alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "myapp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:410585721938:targetgroup/myapp-tg/ecc31f9a212424bd",
            "arn_suffix": "targetgroup/myapp-tg/ecc31f9a212424bd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:410585721938:targetgroup/myapp-tg/ecc31f9a212424bd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "myapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tf-init-dev-target-group"
            },
            "tags_all": {
              "Name": "tf-init-dev-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cddbf42c9a0c4130",
            "domain": "vpc",
            "id": "eipalloc-007098fdf2083f4a1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0306098e997be54ab",
            "private_dns": "ip-172-16-2-237.ec2.internal",
            "private_ip": "172.16.2.237",
            "public_dns": "ec2-44-195-215-53.compute-1.amazonaws.com",
            "public_ip": "44.195.215.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-init-dev-eip"
            },
            "tags_all": {
              "Name": "tf-init-dev-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-019727c54c54931ae",
            "domain": "vpc",
            "id": "eipalloc-0a3e259741fd591d5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06a05195c07272cea",
            "private_dns": "ip-172-16-3-126.ec2.internal",
            "private_ip": "172.16.3.126",
            "public_dns": "ec2-54-90-46-9.compute-1.amazonaws.com",
            "public_ip": "54.90.46.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-init-dev-eip"
            },
            "tags_all": {
              "Name": "tf-init-dev-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:internet-gateway/igw-01fd13b6bcff2cb9a",
            "id": "igw-01fd13b6bcff2cb9a",
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-igw"
            },
            "tags_all": {
              "Name": "tf-init-dev-igw"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007098fdf2083f4a1",
            "connectivity_type": "public",
            "id": "nat-0fb1c945217c9192d",
            "network_interface_id": "eni-0306098e997be54ab",
            "private_ip": "172.16.2.237",
            "public_ip": "44.195.215.53",
            "subnet_id": "subnet-08e010359e6cdfca4",
            "tags": {
              "Name": "tf-init-dev-natg"
            },
            "tags_all": {
              "Name": "tf-init-dev-natg"
            }
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3e259741fd591d5",
            "connectivity_type": "public",
            "id": "nat-0b853ff63f3baf5e4",
            "network_interface_id": "eni-06a05195c07272cea",
            "private_ip": "172.16.3.126",
            "public_ip": "54.90.46.9",
            "subnet_id": "subnet-06f206e118a16b213",
            "tags": {
              "Name": "tf-init-dev-natg"
            },
            "tags_all": {
              "Name": "tf-init-dev-natg"
            }
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01fd13b6bcff2cb9a",
            "id": "r-rtb-09543b38285fb82001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09543b38285fb8200",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:route-table/rtb-04303a8b45cd49675",
            "id": "rtb-04303a8b45cd49675",
            "owner_id": "410585721938",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb1c945217c9192d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-init-dev-route"
            },
            "tags_all": {
              "Name": "tf-init-dev-route"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_subnet.public",
            "aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:route-table/rtb-004231a44beee99fd",
            "id": "rtb-004231a44beee99fd",
            "owner_id": "410585721938",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b853ff63f3baf5e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-init-dev-route"
            },
            "tags_all": {
              "Name": "tf-init-dev-route"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available",
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd58ac985b48ac79",
            "route_table_id": "rtb-04303a8b45cd49675",
            "subnet_id": "subnet-0b7932079f12000fc"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available",
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cd03fd6265d75fa",
            "route_table_id": "rtb-004231a44beee99fd",
            "subnet_id": "subnet-0bab3582694cf8bb8"
          },
          "dependencies": [
            "aws_nat_gateway.test-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available",
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:security-group/sg-051f9873474d7677b",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051f9873474d7677b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "410585721938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-init-dev-alb-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:security-group/sg-03c83031d502ec10f",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c83031d502ec10f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051f9873474d7677b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "410585721938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-init-dev-ecs-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:subnet/subnet-0b7932079f12000fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-0b7932079f12000fc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-private-subnet"
            },
            "tags_all": {
              "Name": "tf-init-dev-private-subnet"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:subnet/subnet-0bab3582694cf8bb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0bab3582694cf8bb8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-private-subnet"
            },
            "tags_all": {
              "Name": "tf-init-dev-private-subnet"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:subnet/subnet-08e010359e6cdfca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-08e010359e6cdfca4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-public-subnet"
            },
            "tags_all": {
              "Name": "tf-init-dev-public-subnet"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:subnet/subnet-06f206e118a16b213",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-06f206e118a16b213",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-public-subnet"
            },
            "tags_all": {
              "Name": "tf-init-dev-public-subnet"
            },
            "vpc_id": "vpc-077d2f0867a39b9c8"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:vpc/vpc-077d2f0867a39b9c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0048fde1e42aee389",
            "default_route_table_id": "rtb-09543b38285fb8200",
            "default_security_group_id": "sg-08463b54a4e925fd0",
            "dhcp_options_id": "dopt-b090d0ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-077d2f0867a39b9c8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09543b38285fb8200",
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-VPC"
            },
            "tags_all": {
              "Name": "tf-init-dev-VPC"
            }
          }
        }
      ]
    }
  ]
}